[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Andy Mroczkowski <amrox@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
hy = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
